# cnbitk-bochum-support

./: .gitignore  AUTHORS  Makefile.am  README  aclocal.m4  configure.ac
config/: .gitignore
desktop/: CNBILoop-AntNeuro-32EEG.desktop  CNBILoop-AntNeuro-64EEG.desktop  CNBILoop-Close.desktop  CNBIMobileProtocols.desktop  CNBIMobileResting.desktop  CNBIWheelchairJoystick.desktop  CNBIWheelchairNavigationDemo.desktop  CNBIWheelchairVisualization.desktop  Makefile.am  eegview-AntNeuro-32EEG.desktop  eegview-AntNeuro-64EEG.desktop
desktop/gUSBamp/: CNBILoop-gUSBamp-16EEG.desktop  CNBILoop-gUSBamp-32EEG.desktop  eegview-gUSBamp-16EEG.desktop  eegview-gUSBamp-32EEG.desktop
gui/: Makefile.am  cp_mobile_resting.gui  cp_mobile_wheelchair.gui
icons/: Makefile.am
images/: Makefile.am
images/xcf/: both_feet.xcf  both_hands.xcf  eye_open.xcf
launchers/: Makefile.am  cl_runloop_antneuro_32.launcher  cl_runloop_antneuro_64.launcher  cp_mobile_resting.launcher  cp_mobile_wheelchair.launcher
launchers/gUSBamp/: cl_runloop_gUSBamp_32.launcher
m4/: funcarg.m4
utilities/: Makefile.am  cl_getdirectory
