PACKAGE_NAME = @PACKAGE_NAME@

iconsdir = ${HOME}/.local/share/icons
icons_DATA = cnbiloop-antneuro-32.svg \
			 cnbiloop-antneuro-64.svg \
			 cnbimobile-joystick.svg \
			 cnbimobile-wheelchair.svg \
			 cnbimobile-wheelchair-bci.svg \
			 cnbimobile-resting.svg \
			 eegview-32.svg \
			 eegview-64.svg
